<resources>
    <string name="app_name">AntiTheftApp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username_email">Username/Email</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="verify_password">Verify Password</string>
    <string name="go_back">Go Back</string>
    <string name="send_email">Send Email</string>
</resources>